--- a/V2Code/personal-website-v2/src/app/components/RetroFilter/retro-filter.style.scss
+++ b/V2Code/personal-website-v2/src/app/components/RetroFilter/retro-filter.style.scss
@@ -14,6 +14,7 @@ $yellow: #f1ef98;
 .blend {
     position: relative; 
     display: block;
+    z-index: -2;
     &:before {
         position: absolute;
         top: 0;
@@ -50,5 +51,4 @@ $yellow: #f1ef98;
 
     background: radial-gradient(circle, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.3) 90%);
     opacity: 0.8;
-    z-index: 1;
 }
